Documentação OpenAPI atualizada. Adicionados os endpoints de Token.
